--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
       "react-dom": "17.0.1",
       "react-router-dom": "5.2.0",
       "shortid": "2.2.15",
-      "styled-components": "4.2.0"
+      "styled-components": "4.2.0",
+      "xstate": "^4.30.6"
    },
    "devDependencies": {
       "@material-ui/core": "4.11.0",
