--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
    "license": "ISC",
    "homepage": "",
    "dependencies": {
+      "@xstate/react": "^2.0.1",
       "react": "17.0.1",
       "react-dom": "17.0.1",
       "react-router-dom": "5.2.0",
